# PaperClaw

./: .env.example  .gitignore  .ruff.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  UPSTREAM.md  hello.py  pyproject.toml  snake.html
.claude/: settings.json
.claude/hooks/: post_phase_check.py  sop_completion_check.py
.github/workflows/: apply-desktop-env-review-fix.yml  apply-final-code-review-fixes.yml  apply-native-workspace-picker-fix.yml  apply-second-code-review-fixes.yml  ci.yml  conflict-marker-scan.yml  consolidate-open-prs.yml  desktop-package.yml  desktop-playwright.yml  linearize-v023-v030.yml  real-llm-e2e.yml  review-autopatch.yml  v016-process-acceptance.yml  v017-cli-self-patch.yml  v017-context-memory.yml  v017-memory-lock-self-patch.yml  v018-mistral-live-acceptance.yml  v018-subagent-acceptance.yml  v019-durable-tasks.yml  v020-plan-skills.yml  v021-lsp.yml  v022-mistral-live-acceptance.yml  v022-verification-reliability.yml  v023-executor-isolation.yml  v024-remote-worker-gateway.yml  v025-distributed-store-queue.yml  v026-agent-message-bus.yml  v027-forgotten-debt-product-foundation.yml  v028-project-knowledge-runtime.yml  v029-artifact-revisions.yml  v030-desktop-product-integration.yml  v030-post-review-hardening.yml  v031-e2e-eval-messagebus.yml  v031-live-team-e2e.yml  v032-observability-closure.yml  v033-resilience-outbox-cancellation.yml  v034-postgres-redis-multiprocess.yml  v035-hybrid-retrieval-quality.yml  v036-project-extensions.yml  v037-extension-execution.yml
Plan/: PaperClaw_v0.01_最小ReAct编码Agent_SOP.md  PaperClaw_v0.02-v0.10_SOP总路线与风险推演.md  PaperClaw_v0.02_Verify与ReflectionAgent_SOP.md  PaperClaw_v0.03-v0.06_PostMVP_Option_Audit.md  PaperClaw_v0.03.2_Global_Verify_Gate_SOP.md  PaperClaw_v0.03_MultiAgent分工协作_SOP.md  PaperClaw_v0.05_HarnessQueryEngine_MVP_SOP.md  PaperClaw_v0.06.1_Safe_Session_Picker_SOP.md  PaperClaw_v0.06.2_MultiAgent_View_Adapter_SOP.md  PaperClaw_v0.06.3_MultiAgent_TUI_Panel_SOP.md  PaperClaw_v0.06_Claw_TUI_MVP_SOP.md  PaperClaw_v0.07_Test_Hardening_Gaps_SOP.md  PaperClaw_v0.07_Trace_Foundation_MVP_SOP.md  PaperClaw_v0.08_Context_Combined_Hardening_SOP.md  PaperClaw_v0.08_Context_Orchestration_MVP_SOP.md  PaperClaw_v0.09.1_BM25_Incremental_Retrieval_SOP.md  PaperClaw_v0.09.1_RAG_ContextSource_Citation_SOP.md  PaperClaw_v0.09.1_RAG_Storage_Hardening_SOP.md  PaperClaw_v0.09_ContextSource_Registration_Contract.md  PaperClaw_v0.09_MCP_Capability_Selection_SOP.md  PaperClaw_v0.09_MCP_Protocol_Foundation_Phase_A_SOP.md  PaperClaw_v0.09_MCP_Runtime_Integration_SOP.md  PaperClaw_v0.09_MCP_Transport_Hardening_SOP.md  PaperClaw_v0.10_Model_Policy_Foundation_SOP.md  PaperClaw_v0.11_HTML_Desktop_MVP_SOP.md  PaperClaw_v0.11_Provider_Config_Foundation_SOP.md  PaperClaw_v0.12_Service_API_MVP_and_Plugins.md  PaperClaw_v0.13_Durable_Execution_MVP_and_Plugins.md  PaperClaw_v0.14_Research_Demo_Eval_MVP_and_Plugins.md  PaperClaw_v0.15_Production_Integration_Security_MVP_and_Plugins.md  PaperClaw_v0.16_Process_Acceptance_Recovery.md  PaperClaw_v0.19_Durable_Background_Task_Subagent_MVP_and_Plugins.md  PaperClaw_v0.22_Verification_Reliability_Hardening.md  PaperClaw_v0.23_Executor_Isolation_Subprocess_Worker_Foundation.md  PaperClaw_v0.24_Remote_Worker_Gateway.md  PaperClaw_v0.25_Distributed_Store_Queue_Foundation.md  PaperClaw_v0.26_Agent_Message_Bus_Foundation.md  PaperClaw_v0.27_Forgotten_Debt_Product_Foundation.md  PaperClaw_v0.28_Project_Knowledge_Runtime_Lifecycle.md  PaperClaw_v0.29_Artifact_Revisions.md  (+10 more)
Plan/addenda/: PaperClaw_v0.04_PocketFlow运行时适配_实施补充.md
Plan/drafts/: PaperClaw_v0.04.1_RuntimeProtocolRecovery_SOP草案.md  PaperClaw_v0.04_ContextSessionSQLite_SOP草案.md  PaperClaw_v0.05.1_Harness增强候选池.md  PaperClaw_v0.05_HarnessQueryEngine_SOP草案.md  PaperClaw_v0.06.1_Claw交互增强候选池.md  PaperClaw_v0.06_Claw交互层_SOP草案.md  PaperClaw_v0.07_TraceReplay与分层Eval_SOP草案.md  PaperClaw_v0.08-v0.10_校招开发向路线修订草案.md  (+3 more)
docs/: Handoff-v0.11.1-manual-provider-config.md  STRUCTURED_OUTPUT_COMPATIBILITY.md
scripts/: apply_v017_cli_patch.py  apply_v017_memory_lock_patch.py  build_desktop.py  generate_v0_14_canonical.py  notion_upload.py  paperclaw_desktop_entry.py  run_v0_05_real_llm_acceptance.py  run_v0_07_mistral_trace_smoke.py  run_v0_08_context_demo.py  run_v0_09_1_rag_demo.py
tests/: __init__.py  conftest.py  helpers.py  test_pocketflow_vendor_integrity.py  test_project_baseline.py
(+667 files in other folders)
