[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperclaw"
version = "0.0.1"
description = "A lightweight agent runtime for coding and research workflows"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
paperclaw = "paperclaw.cli:main"

[project.optional-dependencies]
tui = [
    "textual>=1.0,<8",
]
dev = [
    "pytest>=8.3",
    "pytest-reportlog>=0.4,<1",
    "hypothesis>=6.100,<7",
    "ruff>=0.7",
    "textual>=1.0,<8",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["paperclaw*", "pocketflow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "real_llm: tests that call a live LLM provider (slow, costly, non-deterministic)",
]

[tool.ruff]
target-version = "py312"
extend-exclude = ["src/pocketflow"]

[tool.ruff.lint]
# Bootstrap CI with correctness-critical rules. The repository predates the
# Ruff gate and still contains a large unused-import/style backlog; those are
# cleanup debt, not reasons to disable syntax/undefined-name protection.
select = ["E9", "F63", "F7", "F82"]
