[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperclaw"
version = "0.0.1"
description = "A lightweight agent runtime for coding and research workflows"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
paperclaw = "paperclaw.entrypoint:main"
paperclaw-gui = "paperclaw.desktop.app:main"

[project.optional-dependencies]
tui = [
    "textual>=1.0,<8",
]
gui = [
    "pywebview>=5,<7",
]
build = [
    "pyinstaller>=6,<7",
    "pywebview>=5,<7",
]
dev = [
    "pytest>=8.3",
    "hypothesis>=6.100,<7",
    "ruff>=0.7",
    "textual>=1.0,<8",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["paperclaw*", "pocketflow*"]

[tool.setuptools.package-data]
"paperclaw.desktop" = ["static/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "real_llm: tests that call a live LLM provider (slow, costly, non-deterministic)",
]

[tool.ruff]
target-version = "py312"
extend-exclude = ["src/pocketflow"]

[tool.ruff.lint]
# Bootstrap CI with correctness-critical rules. The repository predates the
# Ruff gate and still contains a large unused-import/style backlog; those are
# cleanup debt, not reasons to disable syntax/undefined-name protection.
select = ["E9", "F63", "F7", "F82"]

[tool.ruff.lint.per-file-ignores]
# Postponed annotations make this local test-only CoordinatorResult reference
# runtime-safe. Keep the exception narrow rather than disabling F821 globally.
"tests/unit/test_multiagent_coordinator.py" = ["F821"]
