[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperclaw"
version = "0.0.1"
description = "A lightweight agent runtime for coding and research workflows"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
paperclaw = "paperclaw.entrypoint:main"
paperclaw-gui = "paperclaw.desktop.bootstrap:main"
paperclaw-api = "paperclaw.service.entrypoint:main"
paperclaw-research-eval = "paperclaw.research_eval.cli:main"

[project.optional-dependencies]
tui = [
    "textual>=1.0,<8",
]
gui = [
    "pywebview>=5,<7",
]
service = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.34,<1",
]
build = [
    "pyinstaller>=6,<7",
    "pywebview>=5,<7",
]
dev = [
    "pytest>=8.3",
    "pytest-reportlog>=0.4,<1",
    "hypothesis>=6.100,<7",
    "ruff>=0.7",
    "textual>=1.0,<8",
    "playwright>=1.50,<2",
    "fastapi>=0.115,<1",
    "uvicorn>=0.34,<1",
    "httpx>=0.28,<1",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["paperclaw*", "pocketflow*"]

[tool.setuptools.package-data]
"paperclaw.desktop" = ["static/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "real_llm: tests that call a live LLM provider (slow, costly, non-deterministic)",
    "process_acceptance: tests that launch real service/provider processes and HTTP sockets",
]

[tool.ruff]
target-version = "py312"
extend-exclude = ["src/pocketflow"]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
